--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.23.1",
+    "@vercel/analytics": "^1.5.0",
     "mongodb": "^6.17.0",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "vercel": "^44.6.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
